<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Log In Fragment -->
    <string name="email_text_view">E-mail</string>
    <string name="email_edit_text_hint">E-mail</string>
    <string name="password_text_view">Password</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- Welcome Fragment -->
    <string name="welcome_text_view1">Welcome to Shoe Store App</string>
    <string name="welcome_text_view2">Hope You Love it</string>
    <string name="welcome_button_to_log_in">Log In</string>
    <string name="welcome_button_to_instructions">Instructions</string>

    <!-- Instruction Fragment -->
    <string name="instruction_text_view1">This is a Free App</string>
    <string name="instruction_text_view2">Shoe Store</string>
    <string name="instruction_button">Log In</string>

    <!-- Shoe List -->
    <string name="empty_text_view">There is no shoes\nTry adding one</string>
    <string name="fab_content_description">Add Shoe</string>

    <!-- Shoe Item -->
    <string name="shoe_name_label">Name: </string>
    <string name="shoe_size_label">Size: </string>
    <string name="shoe_company_label">Company: </string>
    <string name="shoe_description_label">Description: </string>
    <string name="shoe_images_label">Images: </string>

    <!-- Detail Fragment -->
    <string name="shoe_name_hint">Name</string>
    <string name="shoe_size_hint">Size</string>
    <string name="shoe_company_hint">Company</string>
    <string name="shoe_description_hint">Description</string>
    <string name="shoe_images_hint">Images</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <!-- Menu Main -->
    <string name="menu_sign_out">Sign Out</string>

</resources>
